# copc-converter

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug-issue-report.md
.github/workflows/: ci.yaml  publish.yaml  release.yaml
docs/: phase-2b-chunked-build.md  phase-2c-per-leaf-removal.md  phase-3-temp-file-compression.md  temporal-index-spec.md
src/: chunking.rs  copc_types.rs  hierarchy_pages.rs  lib.rs  main.rs  node_store.rs  octree.rs  validate.rs  writer.rs
src/tools/: http_source.rs  mod.rs  source.rs
tests/: integration.rs
tests/data/: input.laz  untwine_reference.copc.laz
