[package]
name = "copc_converter"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "copc_converter"
path = "src/main.rs"

[dependencies]
las = { version = "0.9", features = ["laz-parallel"] }
laz = { version = "0.12", features = ["parallel"] }
byteorder = "1.5"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
rayon = "1.10"
