[package]
name = "copc_converter"
version = "0.0.0-dev"
edition = "2024"
description = "Fast, memory-efficient converter from LAS/LAZ to COPC (Cloud-Optimized Point Cloud)"
license = "MIT"
readme = "README.md"
keywords = ["copc", "las", "laz", "pointcloud", "lidar"]
categories = ["command-line-utilities", "science::geo"]
repository = "https://github.com/360-geo/copc-converter"

[lib]
name = "copc_converter"
path = "src/lib.rs"

[[bin]]
name = "copc_converter"
path = "src/main.rs"

[[bin]]
name = "compare_copc"
path = "src/bin/compare_copc.rs"
required-features = ["compare"]

[features]
compare = ["dep:reqwest", "dep:tokio"]

[dependencies]
las = { version = "0.9", features = ["laz-parallel"] }
laz = { version = "0.12", features = ["parallel"] }
byteorder = "1.5"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
reqwest = { version = "0.12", features = ["rustls-tls"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }

[dev-dependencies]
byteorder = "1.5"
